# ai_compressor

./: .gitignore  README.md  app.py  constants.py  gui.py  main.py  pyproject.toml  requirements.txt
core/: ai_client.py  pdf_parser.py
utils/: key_manager.py  logging_setup.py
writers/: docx_writer.py  pdf_writer.py  txt_writer.py
