[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-academic-compressor"
version = "2.0.0"
description = "Сжатие и упрощение академических текстов с помощью DeepSeek"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "aiohttp>=3.9",
    "pypdf>=3.0",
    "python-docx>=0.8",
    "reportlab>=3.6",
    "click>=8.0",
]

[project.scripts]
ai-compress = "main:cli"